--- a/main.bib
+++ b/main.bib
@@ -284,3 +284,8 @@
   year      = {2009},
   publisher = {John Wiley \& Sons}
 }
+
+@misc{mmcif_dictionary,
+  url     = {https://mmcif.wwpdb.org/},
+  journal = {PDBx/mmCIF Dictionary Resources}
+} 
