--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -128,7 +128,7 @@
 \markright{\textsc{Introduction}}
 \addcontentsline{toc}{chapter}{Introduction}
 
-Partial atomic charges are real numbers which describe the electron density in a molecule. They are used in various fields of chemistry, e.g. in molecular dynamics, molecular docking, and pharmacophore design. \cite{} Partial atomic charges are not measurable, therefore, their values need to be calculated. Standard calculation methods are based on quantum mechanical methods. However, these methods are computationally complex and are applicable only to small molecules. Therefore, empirical methods are often used instead, which are much faster with comparable accuracy. \cite{schindler2021sqe}
+Partial atomic charges are real numbers which describe the electron density in a molecule. They are used in various fields of chemistry, e.g. in molecular dynamics, molecular docking, and pharmacophore design. \cite{} Partial atomic charges are not measurable, therefore, their values need to be calculated. Standard calculation methods are based on quantum mechanical methods. However, these methods are computationally complex and are applicable only to small molecules. Therefore, empirical methods are often used instead, which are much faster with sufficient accuracy. \cite{schindler2021sqe}
 
 Atomic Charge Calculator II \cite{racek2020acc2} and αCharges \cite{schindler2023alphacharges} are two web-based applications which allow fast calculation of partial atomic charges by empirical methods. The Atomic Charge Calculator II integrated the Litemol viewer \cite{sehnal2017litemol} to allow users to visualize the calculated partial atomic charges. However, the Litemol viewer is no longer maintained. Its modern replacement is the Mol* viewer \cite{sehnal2021molstar}, which however does not support the visualization of partial atomic charges.
 
