--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -128,13 +128,13 @@
 \markright{\textsc{Introduction}}
 \addcontentsline{toc}{chapter}{Introduction}
 
-Partial atomic charges are real numbers which describe the electron density in a molecule. They are used in various fields of chemistry, e.g. in molecular dynamics, molecular docking, and pharmacophore design. \cite{} Partial atomic charges are not measurable, therefore, their values need to be calculated. Standard calculation methods are based on quantum mechanical methods. However, these methods are computationally complex and are applicable only to small molecules. Therefore, empirical methods are often used instead, which are much faster with sufficient accuracy. \cite{schindler2021sqe}
+Partial atomic charges are real numbers that describe a molecule's electron density. They are used in various fields of chemistry, e.g., in molecular dynamics, molecular docking, and pharmacophore design. \cite{} Partial atomic charges are a theoretical concept; therefore, they cannot be measured. However, their values can be calculated. Standard calculation methods are based on quantum mechanical methods. However, these methods are computationally complex and are applicable only to small molecules. Therefore, empirical methods are often used instead, which are much faster with sufficient accuracy. \cite{schindler2021sqe}
 
-Atomic Charge Calculator II \cite{racek2020acc2} and αCharges \cite{schindler2023alphacharges} are two web-based applications which allow fast calculation of partial atomic charges by empirical methods. The Atomic Charge Calculator II integrated the Litemol viewer \cite{sehnal2017litemol} to allow users to visualize the calculated partial atomic charges. However, the Litemol viewer is no longer maintained. Its modern replacement is the Mol* viewer \cite{sehnal2021molstar}, which however does not support the visualization of partial atomic charges.
+Atomic Charge Calculator II \cite{racek2020acc2} and αCharges \cite{schindler2023alphacharges} are two web-based applications that allow fast calculations of partial atomic charges by empirical methods. The Atomic Charge Calculator II integrated the Litemol viewer \cite{sehnal2017litemol} to enable the users to visualize the calculated partial atomic charges. However, the Litemol viewer is no longer maintained. Its modern replacement is the Mol* viewer \cite{sehnal2021molstar}, which does not, however, support the visualization of partial atomic charges.
 
-Therefore, the main goal of this thesis is to extend the Mol* library \cite{sehnal2021molstar} to support the visualization of partial atomic charges and subsequently incorporate the Mol* viewer into the Atomic Charge Calculator II and αCharges web applications.
+Therefore, the main goal of this thesis is to extend the Mol* library to support the visualization of partial atomic charges and, subsequently, incorporate the Mol* viewer into the Atomic Charge Calculator II and αCharges web applications.
 
-Chapter 1 explains the theoretical concepts of molecular structures and partial atomic charges. Furthermore, it describes the chemical file formats used in the thesis. Chapter 2 covers the software used for visualizing molecular structures, with a focus on the Mol* viewer. Chapter 3 describes the implementation of the partial atomic charges extension in Mol*. Additionally, it describes the implementation of the Mol* viewer plugin, which is integrated into the Atomic Charge Calculator II and AlphaFold web applications in Chapters 4 and 5.
+Chapter 1 explains the theoretical concepts of molecular structures and partial atomic charges and describes the chemical file formats used in the thesis. Chapter 2 describes the various ways to visualize molecular structures and the Mol* library. Chapter 3 describes the implementation of the Mol* extension for visualizing partial atomic charges. Additionally, it describes the implementation of the Mol* viewer plugin, which is integrated into the Atomic Charge Calculator II and αCharges web applications in Chapters 4 and 5.
 
 \newpage
 \chapter{Theory}
